--- a/car.html
+++ b/car.html
@@ -5,12 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CarSharing</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;700;900&family=Open+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;700;900&family=Open+Sans:wght@300;400;600;800&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="normalize_css.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 
+<div class="all">
+
+    <header class="header">
+        <div class="header__container container">
+            <a href="/" class="logo">
+                <img src="images/icon-logo-normal.svg" alt="logo">
+                <span>Car</span> Sharing
+            </a>
+
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li class="menu__el"><a href="" class="menu__link">Home</a></li>
+                    <li class="menu__el"><a href="" class="menu__link">Blog</a></li>
+                    <li class="menu__el"><a href="" class="menu__link">Service</a></li>
+                    <li class="menu__el"><a href="" class="menu__link">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="hero"></div>
+
+</div>
 </body>
 </html>
