--- a/car.html
+++ b/car.html
@@ -33,8 +33,27 @@
         </div>
     </header>
 
-    <div class="hero"></div>
+    <section class="hero">
+        <h1 class="hero__title">
+            Car Sharing
+        </h1>
+        <p class="hero__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores, dolorem doloribus ea error et
+            eveniet exercitationem explicabo facere id impedit magni maiores modi molestias natus nihil nobis numquam
+            pariatur placeat quam quas quia recusandae sequi sunt tenetur velit voluptas? Cupiditate eligendi enim iste
+            neque nostrum omnis quia totam vitae.hero__btn
+        </p>
+        <div class="hero__buttons">
+            <a href="" class="hero__btn hero_btn--share">Share a car</a>
+            <a href="" class="hero__btn hero_btn--key">Key features</a>
+        </div>
 
-</div>
+        <a href="#blog" class="hero__arrow">
+            Przejdź dalej
+        </a>
+    </section>
+
+    <section id="blog"></section>
+</div><!-- all -->
 </body>
 </html>
