--- a/car.html
+++ b/car.html
@@ -53,7 +53,125 @@
         </a>
     </section>
 
-    <section id="blog"></section>
+    <section class="section section-blog" id="blog">
+        <div class="section-blog-container container">
+
+            <h2 class="section-title">
+                Blog
+            </h2>
+
+            <div class="row">
+                <div class="col">
+                    <article class="art">
+                        <img src="images/photo1.png" alt="" class="art__image">
+                        <h3 class="art__title">Lorem ipsum dolor sit amet.</h3>
+                        <p class="art__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eum
+                            expedita fuga, optio praesentium quisquam sunt suscipit. Adipisci alias nam natus nulla
+                            porro quis quo soluta voluptas. Accusamus asperiores incidunt magni officia quae quidem
+                            temporibus voluptas. Asperiores beatae eius non pariatur quisquam quos sequi voluptate?
+                            Accusantium eveniet minima repellat sint?
+                        </p>
+                        <a href="" class="btn art__btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="art">
+                        <img src="images/photo2.png" alt="" class="art__image">
+                        <h3 class="art__title">Lorem ipsum dolor sit amet.</h3>
+                        <p class="art__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eum
+                            expedita fuga, optio praesentium quisquam sunt suscipit. Adipisci alias nam natus nulla
+                            porro quis quo soluta voluptas. Accusamus asperiores incidunt magni officia quae quidem
+                            temporibus voluptas. Asperiores beatae eius non pariatur quisquam quos sequi voluptate?
+                            Accusantium eveniet minima repellat sint?
+                        </p>
+                        <a href="" class="btn art__btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="art">
+                        <img src="images/photo3.png" alt="" class="art__image">
+                        <h3 class="art__title">Lorem ipsum dolor sit amet.</h3>
+                        <p class="art__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eum
+                            expedita fuga, optio praesentium quisquam sunt suscipit. Adipisci alias nam natus nulla
+                            porro quis quo soluta voluptas. Accusamus asperiores incidunt magni officia quae quidem
+                            temporibus voluptas. Asperiores beatae eius non pariatur quisquam quos sequi voluptate?
+                            Accusantium eveniet minima repellat sint?
+                        </p>
+                        <a href="" class="btn art__btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="section section-service" id="service">
+        <div class="section-service-container container">
+            <h2 class="section-title section-title--light">
+                Service
+            </h2>
+
+            <div class="row">
+                <div class="col">
+                    <article class="service-art">
+                        <img src="images/mini1.png" alt="" class="service-image">
+                        <h3 class="service-title">Lorem ipsum dolor sit.</h3>
+                        <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur
+                            atque corporis delectus deserunt dolore dolores incidunt, necessitatibus sed sint.</p>
+                        <a href="" class="btn service-btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="service-art">
+                        <img src="images/mini2.png" alt="" class="service-image">
+                        <h3 class="service-title">Lorem ipsum dolor sit.</h3>
+                        <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur
+                            atque corporis delectus deserunt dolore dolores incidunt, necessitatibus sed sint.</p>
+                        <a href="" class="btn service-btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="service-art">
+                        <img src="images/mini3.png" alt="" class="service-image">
+                        <h3 class="service-title">Lorem ipsum dolor sit.</h3>
+                        <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur
+                            atque corporis delectus deserunt dolore dolores incidunt, necessitatibus sed sint.</p>
+                        <a href="" class="btn service-btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="service-art">
+                        <img src="images/mini4.png" alt="" class="service-image">
+                        <h3 class="service-title">Lorem ipsum dolor sit.</h3>
+                        <p class="service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur
+                            atque corporis delectus deserunt dolore dolores incidunt, necessitatibus sed sint.</p>
+                        <a href="" class="btn service-btn">
+                            Read more
+                        </a>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section-contact" id="contact">
+        <h2 class="section-title">
+            Contact
+        </h2>
+    </section>
+
 </div><!-- all -->
 </body>
 </html>
