--- a/car.html
+++ b/car.html
@@ -167,9 +167,43 @@
     </section>
 
     <section class="section section-contact" id="contact">
-        <h2 class="section-title">
-            Contact
-        </h2>
+        <div class="section-contact-container container">
+            <h2 class="section-title">
+                Contact
+            </h2>
+            <form class="form">
+                <div class="form-row">
+                    <label for="name">Type your name</label>
+                    <input id="name" name="name" type="text" class="form-input" placeholder="Type your name">
+                </div>
+
+                <div class="form-row">
+                    <label for="email">Type your e-mail</label>
+                    <input id="email" name="email" type="email" class="form-input" placeholder="Type your e-mail">
+                </div>
+
+                <div class="form-row">
+                    <label for="msg">Type your message</label>
+                    <textarea id="msg" name="msg" class="form-input" placeholder="Type your message"></textarea>
+                </div>
+
+                <div class="form-row">
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab eligendi itaque iure, molestias non
+                        odit quae quam voluptatibus? Aliquid quisquam quos saepe voluptatum. Alias, aliquid architecto
+                        autem dolore dolorem doloribus illum impedit labore numquam pariatur quos reiciendis, sequi vel.
+                        Accusamus architecto maiores perferendis quibusdam ut. Dolore placeat recusandae saepe ullam.
+                    </label>
+                </div>
+                <div class="form-row">
+                    <button type="submit" class="form-btn">
+                        Wyślij
+                    </button>
+                </div>
+
+            </form>
+        </div>
     </section>
 
 </div><!-- all -->
